corpus/cpp/designated_init/case-01/snapshots/gcc13_14/native_text_capture/render.verbose.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: [designated_init] designated initializer error @ src/main.cpp:7:41
help: reorder the designators to match the declaration order or check the member name
raw : src/main.cpp:7:41: error: designator order for field ‘Config::port’ does not match declaration order in ‘Config’
| src/main.cpp:7:41
|     Config cfg{.timeout = 30, .port = 10};
|                                         ^
raw:
  src/main.cpp:7:41: error: designator order for field ‘Config::port’ does not match declaration order in ‘Config’
  src/main.cpp: In function ‘int main()’:
      7 |     Config cfg{.timeout = 30, .port = 10};
        |                                         ^
debug: rule_id=rule.family.designated_init.message_terms
debug: matched_conditions=message_contains=designator order for field, message_contains=does not match declaration order, phase=semantic
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output